Change publib from JSON to JS

--- a/publib.ipynb
+++ b/publib.ipynb
@@ -26,30 +26,29 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "24uz-8iKVAtI"
-      },
+      "execution_count": 2,
+      "metadata": {},
       "outputs": [],
       "source": [
         "KAUST_REPO_BIB_FILE = 'Bernard_2019_12_24.bib'\n",
         "TITLE_SIMILARITY_THRESHOLD = 0.95  # [0, 1)\n",
-        "CAREFUL = True  # ask if the match is not perfect"
+        "CAREFUL = False  # ask if the match is not perfect"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 134
-        },
-        "colab_type": "code",
-        "id": "RvNm2aRqnOrv",
-        "outputId": "5d176c79-2080-4287-9ec3-453c90a82ca6"
-      },
-      "outputs": [],
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "30"
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import json\n",
         "from difflib import SequenceMatcher\n",
@@ -109,15 +108,12 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "X5WNFQSvd6uW"
-      },
+      "execution_count": 6,
+      "metadata": {},
       "outputs": [],
       "source": [
         "authors = list(Publication.AUTHORS.keys())\n",
-        "k = {\n",
+        "lib = {\n",
         "    'venue': list(Publication.VENUES.keys()),\n",
         "    'full_venue': list(Publication.VENUES.values()),\n",
         "    'author': list(Publication.AUTHORS.values()),\n",
@@ -129,7 +125,7 @@
         "             'abstract'],\n",
         "}\n",
         "\n",
-        "def get(p, key, k=k, authors=authors):\n",
+        "def get(p, key, lib=lib, authors=authors):\n",
         "    if key in {'theme', 'thumbnail', 'paper', 'title', 'abstract'}:\n",
         "        return getattr(p, key)\n",
         "    elif key == 'handle':\n",
@@ -137,7 +133,7 @@
         "    elif key == 'year':\n",
         "        return p.year - 2000\n",
         "    elif key == 'venue':\n",
-        "        return k['venue'].index(p.venue),\n",
+        "        return lib['venue'].index(p.venue)\n",
         "    elif key == 'authors':\n",
         "        return [authors.index(a) for s in p.authors for a in s]\n",
         "    elif key == 'coauthors':\n",
@@ -151,15 +147,17 @@
         "                coauthors.append(0)\n",
         "        return [c for s, c in zip(p.authors, coauthors) for a in s]\n",
         "    elif key == 'distinctions':\n",
-        "        return [k['distinction'].index(d) for d in p.distinctions]\n",
+        "        return [lib['distinction'].index(d) for d in p.distinctions]\n",
         "    elif key == 'links':\n",
-        "        return [p.links[l] if l in p.links else 0 for l in k['link']]\n",
+        "        return [p.links[l] if l in p.links else 0 for l in lib['link']]\n",
         "    else:\n",
         "        raise ValueError(f'unknown key: {key}')\n",
         "\n",
-        "k['lib'] = [[get(p, k) for k in k['keys']] for p in publib]\n",
-        "with open('publib.json', 'w') as f:\n",
-        "    json.dump(k, f)"
+        "lib['lib'] = [[get(p, k) for k in lib['keys']] for p in publib]\n",
+        "with open('publib.js', 'w') as f:\n",
+        "    f.write('const publib = ')\n",
+        "    f.write(repr(lib))\n",
+        "    f.write(';')"
       ]
     }
   ]
