Add filters and themes

--- a/publib.ipynb
+++ b/publib.ipynb
@@ -26,10 +26,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# https://verbosus.com/bibtex-style-examples.html\n",
         "KAUST_REPO_BIB_FILE = 'Bernard_2019_12_24.bib'\n",
         "TITLE_SIMILARITY_THRESHOLD = 0.95  # [0, 1)\n",
         "CAREFUL = False  # ask if the match is not perfect"
@@ -37,20 +37,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": "30"
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import json\n",
+        "from pathlib import Path\n",
         "from difflib import SequenceMatcher\n",
         "\n",
         "from publib import Publication, PUBLIB as publib\n",
@@ -63,6 +54,8 @@
         "    # only every two entries must be separated by '\\n}\\n'\n",
         "    # every field must be one liner and tightly surrounded by {}\n",
         "    # the authors must be like 'Last, first' separated by ' and '\n",
+        "    if not Path(bibfile).exists():\n",
+        "        return []\n",
         "    out = []\n",
         "    with open(bibfile, 'r') as f:\n",
         "        for entry in f.read().split('\\n}\\n'):\n",
@@ -85,30 +78,31 @@
         "\n",
         "count = 0\n",
         "biblib = parse_formated_bib(KAUST_REPO_BIB_FILE)\n",
-        "for p in publib:\n",
-        "    sim = [similarity(b['title'], p.title) for b in biblib]\n",
-        "    arg = max(enumerate(sim), key=lambda x: x[1])[0]\n",
-        "    if sim[arg] > TITLE_SIMILARITY_THRESHOLD:\n",
-        "        b = biblib[arg]\n",
-        "        if CAREFUL and sim[arg] != 1:\n",
-        "            print('(publib)', p.title)\n",
-        "            print('(biblib)', b['title'])\n",
-        "            while True:\n",
-        "                answer = input('match? (y/n): ')\n",
-        "                if answer in 'yn':\n",
-        "                    break\n",
-        "            if answer == 'n':\n",
-        "                print('skipped')\n",
-        "                continue\n",
-        "        p.abstract = b.get('note', p.abstract)\n",
-        "        p.handle = b['url'][b['url'].rfind('t/') + 2:]\n",
-        "        count += 1\n",
+        "if biblib:\n",
+        "    \n",
+        "    for p in publib:\n",
+        "        sim = [similarity(b['title'], p.title) for b in biblib]\n",
+        "        arg = max(enumerate(sim), key=lambda x: x[1])[0]\n",
+        "        if sim[arg] > TITLE_SIMILARITY_THRESHOLD:\n",
+        "            b = biblib[arg]\n",
+        "            if CAREFUL and sim[arg] != 1:\n",
+        "                print('(publib)', p.title)\n",
+        "                print('(biblib)', b['title'])\n",
+        "                while True:\n",
+        "                    answer = input('match? (y/n): ')\n",
+        "                    if answer in 'yn':\n",
+        "                        break\n",
+        "                if answer == 'n':\n",
+        "                    print('skipped')\n",
+        "                    continue\n",
+        "            p.abstract = b.get('note', p.abstract)\n",
+        "            p.handle = b['url'][b['url'].rfind('t/') + 2:]\n",
+        "            count += 1\n",
         "count"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
